@@ -102,6 +102,15 @@ INSTALLATION (UNIX)
   the perl subdirectory of the build tree with appropriate options and
   rebuild the module after running make and before running make install.
 
+  To also build the PHP remctl PECL module, pass the --enable-php option
+  to configure.  The PHP PECL module build is handled by the normal PHP
+  extension build system and therefore will be installed into your local
+  PHP module directory.  I believe the build machinery that comes with the
+  package should work for a variety of different PHP versions, but you may
+  need to run phpize in the php/ directory before running configure.
+  Please let me know, including your version of PHP and your architecture,
+  if this is the case.
+
   Normally, configure will use krb5-config to determine the flags to use
   to compile with your Kerberos GSS-API libraries.  If krb5-config isn't
   found, it will look for the standard Kerberos libraries in locations
