@@ -2,6 +2,10 @@
 
 remctl 2.13 (unreleased)
 
+    Added a PHP remctl PECL module from Andrew Mortensen, enabled with
+    --enable-php at configure time.  These bindings are only tested with
+    PHP 5.
+
     Several Windows fixes from Matthew Loar, plus really include
     portable/winsock.c in the distribution.  This version should now build
     and run on Windows.
